change label color in purchases

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -131,14 +131,24 @@ body
   vertical-align middle
 
 /************** main css ******************/
+.bg-war
+  color #FF9800
+  background-color #faefde
+.bg-paypal
+  color #337ab7
+  background-color #cadbea
+.bg-notpaid
+  color #d22626
+  background #f2dede
+.bg-green
+  background-color #dff0d8
+  color #528a3b
 .bg-gray
   font-weight 700
   background-color #a7abaf
 .bg-info2
   font-weight 700
   background-color #4ecdd6
-.bg-war
-  background-color #daa400
 .bg-success
   background-color #528a3b !important
 .bg-danger
