--- a/app/css/main.css
+++ b/app/css/main.css
@@ -135,6 +135,22 @@ body {
   margin-left: 2px;
   vertical-align: middle;
 }
+.bg-war {
+  color: #ff9800;
+  background-color: #faefde;
+}
+.bg-paypal {
+  color: #337ab7;
+  background-color: #cadbea;
+}
+.bg-notpaid {
+  color: #d22626;
+  background: #f2dede;
+}
+.bg-green {
+  background-color: #dff0d8;
+  color: #528a3b;
+}
 .bg-gray {
   font-weight: 700;
   background-color: #a7abaf;
@@ -142,9 +158,6 @@ body {
 .bg-info2 {
   font-weight: 700;
   background-color: #4ecdd6;
-}
-.bg-war {
-  background-color: #daa400;
 }
 .bg-success {
   background-color: #528a3b !important;
