--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -5,5 +5,6 @@
         <p>Te enviamos un correo a correo@correo.com, con los datos para el deposito</p>
 
         <p>Por tu compra de</p>
+        <p><button class="btn btn-success btn-cart" ui-sref="home">Regresar al inicio</button></p>
     </div>
 </div>
