--- a/app/templates/auth/partials/my-account-items.html
+++ b/app/templates/auth/partials/my-account-items.html
@@ -4,5 +4,6 @@
     </a>
     <a href="#" class="list-group-item" ui-sref="sales"><i class="ion-bag"></i> Mis compras</a>
     <a href="#" class="list-group-item" ui-sref="address"><i class="ion-ios-location-outline"></i> Mis direcciones</a>
+    <a href="#" class="list-group-item" ui-sref="sales"><i class="fa fa-credit-card"></i> Mis tarjetas guardadas</a>    
     <a href="#" class="list-group-item" ui-sref="profile"><i class="ion-ios-gear-outline"></i> Configuración</a>
 </div>
